# botman

./: .gitignore  README.md  mcp_server.py  pyproject.toml
archived/: main.py
archived/dev_documents/: fastmcp_llms_doc.txt  fastmcp_server_doc.md
archived/examples/: sample_agent.py  sample_code.py  sample_external_mcp_client.py  sample_langchain.py
archived/guibot/: autogui.py
botman/: AGENT.md  __init__.py  app.py
botman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
botman/browser/: __init__.py  auth.py  core.py
botman/mcp/: __init__.py  server.py
browserbot/: __init__.py  agentkit.py  autobrowser.py  browser_bot.py  fastmcp_server.py  google.py  sample_agent.py  sample_code.py  sample_external_mcp_client.py  sample_langchain.py  sample_mcp_client.py
browserbot/agentkit/: AGENTS.md
dev_documents/: fastmcp_client_doc.md  fastmcp_llms_doc.txt  fastmcp_server_doc.md  fastmcp_tools_doc.md
docs/: AGENTS.md
guibot/: autogui.py
scripts/: ensure_login.py
