[project]
name = "botman"
version = "0.1.0"
description = "Browser automation helpers packaged with a FastMCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.3.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "playwright>=1.55.0",
    "pyautogui>=0.9.54",
    "fastmcp>=0.1.0",
    "mcp[cli]>=1.17.0",
    "openai-agents>=0.1.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-deepseek>=1.0.0",
    "pytesseract>=0.3.13",
    "langchain-mcp-adapters>=0.1.11",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = [
    "botman",
    "browserbot",
]
namespaces = false

[project.scripts]
fastmcp-server = "botman.mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
